# AiogramMocker

./: .gitignore  README.md  pyproject.toml
app/: bot_client.py  mock_bot.py  mock_message_manager.py
app/test_di/: start_cmd.py
app/test_groosha/handlers/: common.py  ordering_food.py  test_button.py
tests/: test_bot.py  test_di.py  test_groosha.py
tests/test_groosha/: test_groosha.py
tests/test_groosha/handlers/: ordering_drinks.py  ordering_food.py
